# ssp

./: .gdbinit  .mtn-ignore  Makefile.am  Makefile.in  NOTES  TODO.txt  configure  configure.ac  doxygen.cfg  example  example.ptkdb  integrator  integrator.ptkdb  pool1_feedback1.yml  release-expand.config  ssp_test.pm  tensizesp.yml  test-dist  tests.config
docs/: HOWTO.txt  fastguide.txt  tutorial.txt
install/: release.yml
install/deb/: changelog  control  rules
install/osx/PackageMaker.pmdoc/: 01package-contents.xml  01package.xml  index.xml
install/osx/Resources/: License.rtf  Welcome.rtf
install/rpm/: ssp.spec
perl/: Makefile  Makefile.am  Makefile.in  SSP.pm  driver.c
perl/SSP/Integrators/: Commands.pm
tests/: Makefile  Makefile.am  Makefile.in  command_extractor  command_extractor.ptkdb  introduction.html  neurospaces_harness  neurospaces_harness.ptkdb  pool1_feedback1.yml  run  run.ptkdb  tests.config  tests_2_html  tests_2_html.ptkdb
tests/perl/: addressing-aggregator1  c1c2p1  c1c2p2  cal1  cal1.ptkdb  cal2  channel1-nernst1  channel1-nernst1.ptkdb  channel2-nernst2  channel2-nernst2.ptkdb  doublea-aggregator  doublep  fork3p  fork4p1  fork4p3  hardcoded-tables1  hardcoded-tables1.ptkdb  hardcoded-tables2.ptkdb  hh1  hh1.ptkdb  hh_tabulator  hh_tabulator.ptkdb  hh_tabulator_A_B  hh_tabulator_alpha_beta  hh_tabulator_internal  hh_tabulator_internal.ptkdb  hh_tabulator_steadystate_tau  output1  output2  output3  output4  pool1  pool1-contributors2  pool1-feedback1  pool1-feedback1.ptkdb  pool1-feedback2  pool1-feedback2.ptkdb  pool2  pool2.ptkdb  purk_test  (+34 more)
tests/perl/heccer/: c1c2p1  c1c2p2  doublep  fork3p  fork4p1  fork4p2  fork4p3  pool1  pool1-feedback1  pool1-feedback2  pool2  singlep  singlep.ptkdb  tensizesp  triplep
tests/specifications/: 0_startup.t  passive.t  pools.t  purkinje.t  synaptic.t  tables.t
tests/specifications/active/: singles.t
tests/specifications/builtins/: cell.t  purkinje.t
tests/specifications/integration/: aggregators.t  analyzers.t  channel_response.t  chemesis3.t  output.t  passive-only.t  passive.t  perfectclamp.t  pools.t  pulsegen.t  purkinje.t  spikes.t  synaptic.t  tables.t  tabulator.t
tests/specifications/integration/active/: active_multiple.t  hh.t  singles.t
tests/specifications/integration/heccer/: passive.t  pools.t
tests/specifications/integration/segments/: purkinje.t
tests/specifications/optimization/: all.t
tests/specifications/segments/: purkinje.t
tests/specifications/ssp/: switches.t  version.t
tests/specifications/strings/: channel-response.txt  channel1-nernst1.txt  channel2-nernst2.txt  debug_stand_alone.txt  hardcoded-tables1.txt  hardcoded-tables2.txt  output1.txt  output2.txt  output3.txt  output4.txt  passive-only1.txt  pool1-contributors2.txt  pool1-feedback1.txt  pool1-feedback2.txt  pool1.txt  pool2.txt  pulse0.txt  pulse2.txt  purk_test.txt  purk_test_passive.txt  purk_test_soma.txt  purk_test_soma_aggregators.txt  spiker3-spike.txt  springmass3-2.txt  springmass3-2p.txt  springmass3.txt  springmass3p.txt  springmass4.txt  springmass4p.txt  stand_alone-inject2e-8-0.01-0.03-0.06.txt  tensizesp.txt
tests/specifications/strings/active/: hh1.txt  singlea-naf.txt
tests/specifications/strings/chemesis3/: cal1.txt
tests/specifications/strings/purkinje/: builtin-edsjb1994-soma-current.txt  builtin-edsjb1994-soma-rest.txt  edsjb1994-current-2.txt  edsjb1994-current.txt  edsjb1994-endogenous.txt  edsjb1994-perfectclamp-filename.txt  edsjb1994-perfectclamp.txt
tests/specifications/strings/segments/: purk_test_axon.txt  purk_test_segment.txt
yaml/: addressing_aggregator1.yml  channel1_nernst1.yml  channel2_nernst2.yml  output1.yml  output2.yml  output3.yml  output4.yml  pool1_contributors2.yml  pool1_feedback1.yml  purk_test.yml  purk_test_axon.yml  purk_test_segment.yml  purk_test_soma.yml  purk_test_soma_0.yml  purk_test_soma_2e-9.yml  purk_test_soma_aggregators.yml  springmass3.yml  springmass4.yml
yaml/heccer/: pool1_feedback1.yml  pulsegen_extgate.yml  pulsegen_exttrig.yml  pulsegen_freerun.yml  singlep.yml
yaml/purkinje/: edsjb1994-current.yml  edsjb1994-endogenous-aggregators.yml  edsjb1994-endogenous.yml  edsjb1994-perfectclamp-filename.yml  edsjb1994-perfectclamp.yml  edsjb1994-silent.yml  edsjb1994.yml
