##
## SSP : a simple scheduler written in perl, for driving numerical
## solver in neuronal modeling.
##

##############################################################################
##'
##' SSP
##'
##' Copyright (C) 2007 Hugo Cornelis
##'
##' Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################

perldir = $(prefix)/glue/swig/perl

nobase_dist_perl_DATA = @PERL_MODULES@

perldatadir = $(prefix)/neurospaces/ssp

nobase_dist_perldata_DATA = @PERL_DATA@

