##
## SSP : a simple scheduler written in perl, for driving numerical
## solver in neuronal modeling.
##

##############################################################################
##'
##' SSP
##'
##' Copyright (C) 2007 Hugo Cornelis
##'
##' Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################


#t automake does not allow to pass in arguments for tests ?

check_SCRIPTS = $(srcdir)/run 

TESTS = $(srcdir)/run

test: check

